# yv-game

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  README.md  run
.cache/clangd/index/: game.cpp.3848DA709160CEC1.idx  game.hpp.4B3707714D482A7E.idx  main.cpp.F60BC61F403EE006.idx
cmake/Modules/: .gitkeep
include/yvium/components/: transform.hpp
include/yvium/entities/: entity.hpp
include/yvium/systems/: system.hpp
scripts/: build.sh  format.sh  run.sh  setup-git-hooks.sh
src/: camera_utils.c  camera_utils.h  main.c  main.cpp  player.c  player.h  renderable_3d.c  renderable_3d.h  scene.c  scene.h
tests/unit/: test_entity.cpp
yv_client/: Cargo.toml  README.md
yv_client/src/: camera.rs  graphics.rs  inputs.rs  main.rs  noise.rs  scenes.rs  terrain.rs  ui.rs  well_known_terms.rs
yv_client/src/actor/: events.rs  systems.rs
yv_client/src/geometry/: shapes.rs  traits.rs
yv_client/src/graphics/: components.rs  mod.rs  observers.rs  plugin.rs  resources.rs  systems.rs  traits.rs  well_known_terms.rs
yv_client/src/lighting/: events.rs  mod.rs  plugin.rs  resources.rs  system_sets.rs  systems.rs  well_known_terms.rs
yv_client/src/materials/: mod.rs  plugin.rs  resources.rs  system_sets.rs  systems.rs
yv_client/src/meshes/: mod.rs  plugin.rs  resources.rs  system_sets.rs  systems.rs
yv_client/src/player/: components.rs  events.rs  plugin.rs  systems.rs
yv_core/: Cargo.toml  README.md
yv_core/src/: accomplishment.rs  actor.rs  augmentation.rs  command.rs  commands.rs  display_name.rs  dual_wield.rs  durability.rs  enchantment.rs  equipment.rs  equipment_slot.rs  hand_slot.rs  identity.rs  identity_prefix.rs  imbuement.rs  inventory.rs  lib.rs  main_hand_wieldable.rs  off_hand_wieldable.rs  placement.rs  prelude.rs  quest.rs  required_accomplishments.rs  requirements.rs  skill.rs  skill_levels.rs  skill_type.rs  skills.rs  spatial_hash_grid.rs  stat.rs  stat_type.rs  stats.rs  terrain.rs  vector_2.rs  vector_3.rs  well_known_terms.rs  world.rs
yv_core/src/actions/: action.rs  action_core.rs  arcane_bolt.rs  mod.rs
yv_core/src/actor/: actor_type.rs  collider_info.rs  components.rs  events.rs  mod.rs  plugin.rs  systems.rs
yv_core/src/actor/collider/: collider_info.rs  cuboid_collider.rs  cylinder_collider.rs  mod.rs  sphere_collider.rs
yv_core/src/actors/: actor_core.rs  mod.rs
yv_core/src/actors/characters/: character_core.rs  mod.rs  player.rs
yv_core/src/actors/characters/npcs/: mod.rs  npc.rs
yv_core/src/actors/characters/npcs/humanoids/: humanoid.rs  mod.rs  mr_orc.rs
yv_core/src/actors/environment/: environment_actor.rs  mod.rs
yv_core/src/actors/environment/mining_nodes/: copper_node.rs  iron_node.rs  mining_node.rs  mod.rs
yv_core/src/actors/environment/trees/: birch.rs  mod.rs  oak.rs  tree.rs  willow.rs
yv_core/src/actors/loot/: loot_actor.rs  loot_bag.rs  lootable_core.rs  mod.rs
yv_core/src/geometry/: geometry_info.rs  mod.rs  shapes.rs
yv_core/src/items/: battleaxe.rs  belt.rs  chest.rs  cloak.rs  dagger.rs  equippable.rs  feet.rs  finger.rs  greatsword.rs  hammer.rs  hands.rs  hatchet.rs  helmet.rs  item.rs  legs.rs  mod.rs  off_hand.rs  one_hand.rs  pickaxe.rs  pouch.rs  quiver.rs  shield.rs  shortsword.rs  two_hand.rs  weapon.rs  weapon_type.rs  wrists.rs
yv_core/src/items/arrows/: iron_arrow.rs  mod.rs  steel_arrow.rs
yv_core/src/items/battleaxes/: mod.rs  rusty_iron_battleaxe.rs
yv_core/src/items/belts/: mod.rs  simple_leather_belt.rs
yv_core/src/items/bracers/: mod.rs
yv_core/src/items/chests/: leather_tunic.rs  linen_tunic.rs  mod.rs
yv_core/src/items/cloaks/: mod.rs  ragged_cloak.rs
yv_core/src/items/daggers/: iron_dagger.rs  mod.rs  stone_dagger.rs
yv_core/src/items/equippables/: equippable.rs  equippable_core.rs  mod.rs
yv_core/src/items/equippables/back_slot/: cloak.rs  mod.rs  ragged_cloak.rs
yv_core/src/items/equippables/belt_slot/: belt.rs  mod.rs  simple_leather_belt.rs
yv_core/src/items/equippables/chest_slot/: chest.rs  leather_tunic.rs  linen_tunic.rs  mod.rs
yv_core/src/items/equippables/finger_slot/: finger.rs  gold_ring.rs  mod.rs
yv_core/src/items/equippables/foot_slot/: footwear.rs  mod.rs  old_leather_sandals.rs
yv_core/src/items/equippables/hand_slot/: hands.rs  mod.rs  wool_gloves.rs
yv_core/src/items/equippables/head_slot/: helmet.rs  iron_skullcap.rs  mod.rs
yv_core/src/items/equippables/leg_slot/: legs.rs  linen_trousers.rs  mod.rs
yv_core/src/items/equippables/pouch_slot/: mod.rs  pouch.rs  stone_idol.rs
yv_core/src/items/equippables/quiver_slot/: iron_arrow.rs  mod.rs  projectile.rs  steel_arrow.rs  stone_arrow.rs
yv_core/src/items/equippables/weapon_slot/: mod.rs  weapon.rs
yv_core/src/items/equippables/wrist_slot/: leather_bracer.rs  mod.rs  wrists.rs
yv_core/src/items/footwear/: mod.rs  old_leather_sandals.rs
yv_core/src/items/greatswords/: iron_greatsword.rs  mod.rs
yv_core/src/items/hammers/: iron_mace.rs  mod.rs  wooden_club.rs
yv_core/src/items/hand_pieces/: mod.rs  wool_gloves.rs
yv_core/src/items/hatchets/: mod.rs
yv_core/src/items/helmets/: iron_skullcap.rs  mod.rs
yv_core/src/items/leg_pieces/: mod.rs
yv_core/src/items/ores/: copper_ore.rs  iron_ore.rs  mod.rs  ore.rs
yv_core/src/items/pickaxes/: mod.rs  stone_pickaxe.rs
yv_core/src/items/pouch_items/: mod.rs
yv_core/src/items/rings/: mod.rs
yv_core/src/items/shields/: mod.rs
yv_core/src/items/shortswords/: iron_shortsword.rs  mod.rs  rusty_iron_shortsword.rs  stone_shortsword.rs
yv_core/src/items/wood/: birch_log.rs  log.rs  mod.rs  oak_log.rs  willow_log.rs
yv_core/src/traits/: action_like.rs  actor_like.rs  character_like.rs  choppable.rs  describable.rs  durable.rs  equippable.rs  has_display_name.rs  has_performer.rs  has_placement.rs  has_requirements.rs  has_skills.rs  has_stats.rs  has_target.rs  identifiable.rs  item.rs  lootable.rs  massive.rs  mineable.rs  mod.rs  ownable.rs  spatial_query_engine.rs  spawnable.rs
yv_serv/: Cargo.toml  README.md
yv_serv/src/: main.rs  prelude.rs
yv_serv/src/components/: mod.rs  placement.rs
(+33 files in other folders)
